--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "proj_1",
+  "name": "node_crud",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/algteixeira/proj_1",
   "license": "MIT",
-  "scripts": {
-    "dev": "ts-node-dev --transpile-only src/server.ts",
-    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
-  },
   "dependencies": {
+    "@types/node": "^17.0.8",
     "express": "^4.17.2",
-    "mysql2": "^2.3.3",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41",
     "uuid": "^8.3.2"
   },
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+  },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.4",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
