--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@joi/date": "^2.1.0",
     "@types/node": "^17.0.8",
     "express": "^4.17.2",
     "joi": "^17.5.0",
+    "moment": "^2.29.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41",
