--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,42 +1,20 @@
 {
     "env": {
-      "es6": true,
-      "node": true
+        "browser": true,
+        "es2021": true
     },
     "extends": [
-      "airbnb-base",
-      "plugin:@typescript-eslint/recommended",
-      "prettier/@typescript-eslint",
-      "plugin:prettier/recommended"
+        "google", "prettier"
     ],
-    "globals": {
-      "Atomics": "readonly",
-      "SharedArrayBuffer": "readonly"
-    },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-      "ecmaVersion": 2018,
-      "sourceType": "module"
+        "ecmaVersion": "latest",
+        "sourceType": "module"
     },
     "plugins": [
-      "@typescript-eslint",
-      "prettier"
+        "@typescript-eslint", "prettier"
     ],
     "rules": {
-      "prettier/prettier": "error",
-      "import/extensions": [
-        "error",
-        "ignorePackages",
-        {
-          "ts": "never"
-        }
-      ]
-    },
-    "settings": {
-      "import/resolver": {
-        "typescript": {
-  
-        }
-      }
+      "prettier/prettier": "error"
     }
-  }
+}
