--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,11 @@
         "@typescript-eslint", "prettier"
     ],
     "rules": {
-      "prettier/prettier": "error"
+      "prettier/prettier": "error",
+      "linebreak-style": "off",
+      "import/prefer-default-export": "off",
+      "require-jsdoc" : "off",
+      "new-cap"  : "off",
+      "max-len": "off"
     }
 }
