--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-    "test": "jest --coverage --runInBand --detectOpenHandles"
+    "test": "jest --coverage --runInBand --detectOpenHandles",
+    "migration:run": "cross-env NODE_ENV=test typeorm migration:run"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
