--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "@joi/date": "^2.1.0",
-    "@types/node": "^17.0.8",
     "express": "^4.17.2",
     "jest": "^27.4.7",
     "joi": "^17.5.0",
     "moment": "^2.29.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "supertest": "^6.2.1",
     "swagger-ui-express": "^4.3.0",
     "ts-jest": "^27.1.2",
     "typeorm": "^0.2.41",
@@ -21,12 +19,12 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-    "test": "jest --coverage --runInBand --detectOpenHandles",
-    "migration:run": "cross-env NODE_ENV=test typeorm migration:run"
+    "test": "jest --coverage --runInBand --detectOpenHandles"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.10",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
@@ -38,6 +36,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
+    "supertest": "^6.2.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
